product inner page

--- a/app4K/products/index.html
+++ b/app4K/products/index.html
@@ -9,7 +9,7 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [HEAD CONTENT] -->
 
-<title>appName</title>
+<title>Products</title>
 <meta name="description" content="" />
 <meta name="author" content="zl-12з" />
 
@@ -37,22 +37,22 @@
 <!-- ## libs -->
 
 <!-- bulma --><link
-     href="app/lib/bulmaParts.css"
+     href="../app/lib/bulmaParts.css"
      rel="stylesheet"  media="all" /><!-- / -->
 <!-- tufte --><link
-     href="app/lib/tufteDesign.css"
+     href="../app/lib/tufteDesign.css"
      rel="stylesheet"  media="all" /><!-- / -->
 <!-- social likes --><link
-     href="app/lib/social-likes_flat.css"
+     href="../app/lib/social-likes_flat.css"
      rel="stylesheet"  media="all" /><!-- / -->
 <!-- app --><link
-     href="app/app4k/icons.css"
+     href="../app/app4k/icons.css"
      rel="stylesheet"  media="all" /><!-- / -->
 <!-- app --><link
-     href="app/app4k/main.css"
+     href="../app/app4k/main.css"
      rel="stylesheet"  media="all" /><!-- / -->
 <!-- app --><link
-     href="app/app4k/components.css"
+     href="../app/app4k/components.css"
      rel="stylesheet"  media="all" /><!-- / -->
 
 <!-- ## Theme CSS -->
@@ -94,10 +94,10 @@
 
             <!-- -------------------------------------------------- main nav -->
             <div class="cMainNav">
-                <a href="#Home" class="is-active">Home</a>
+                <a href="../index.html" class="">Home</a>
                 <a href="#" class="">Gallery</a>
-                <a href="products/index.html" class="">Products</a>
-                <a href="#Contacts" class="">Contacts</a>
+                <a href="#" class="is-active">Products</a>
+                <a href="../index.html#Contacts" class="">Contacts</a>
             </div>
             <!-- endblock -->
 
@@ -109,7 +109,7 @@
 
         <div class="cLanding__content">
             <div class="aCard">
-                <h4>Landing message</h4>
+                <h4>Products intro</h4>
                 <p>Овечки всё делают для людей</p>
             </div>
         </div>
@@ -130,9 +130,9 @@
 <section class="elLayer">
 <header class="cStageHeader cStageHeader--noAnchor">
     <h2 class="aCaption">
-        Актуальное
+        Книги и открытки
         <span class="aSymbol">/</span>
-        Current
+        Books & Cards
     </h2>
 </header>
 <div class="cCardeQuatBox">
@@ -143,7 +143,7 @@
                 <a
                     href="#"
                 ><img class="image"
-                    src="data/landing/cardequate-SheepCity.jpg"
+                    src="../data/demo/writing.svg"
                     alt=""
                 ></a>
             </figure>
@@ -153,14 +153,14 @@
                 <span class="aLinkDecoration"><a class="aLink"
                     href="#"
                 >
-                    Web gallery «Sheep City»
+                    Latvia: atlas
                 </a></span>
             </h4>
             <h5 class="aSubtitle">
                 <a class="aLink"
                     href="#"
                 >
-                    Картинки и рассказы об овечках
+                    Card-set
                 </a>
             </h5>
         </footer>
@@ -172,7 +172,7 @@
                 <a
                     href="#"
                 ><img class="image"
-                    src="data/landing/cardequate-Prints.jpg"
+                    src="../data/demo/writing.svg"
                     alt=""
                 ></a>
             </figure>
@@ -182,14 +182,14 @@
                 <span class="aLinkDecoration"><a class="aLink"
                     href="#"
                 >
-                    Сувениры / Gifts
+                    Calendar 2018
                 </a></span>
             </h4>
             <h5 class="aSubtitle">
                 <a class="aLink"
                     href="#"
                 >
-                    New product: Calendar-2018
+                    Настенный календарь A3
                 </a>
             </h5>
         </footer>
@@ -201,7 +201,7 @@
                 <a
                     href="#"
                 ><img class="image"
-                    src="data/demo/writing.svg"
+                    src="../data/demo/writing.svg"
                     alt=""
                 ></a>
             </figure>
@@ -211,14 +211,14 @@
                 <span class="aLinkDecoration"><a class="aLink"
                     href="#"
                 >
-                    Telegram sticker set
+                    Card set
                 </a></span>
             </h4>
             <h5 class="aSubtitle">
                 <a class="aLink"
                     href="#"
                 >
-                    Vector icons
+                    Набор открыток
                 </a>
             </h5>
         </footer>
@@ -448,7 +448,7 @@
     <section class="elSection cBottomGoodbye">
         <div class="aBlock cBottomGoodbye__aside">
             <figure class="image">
-                <img src="app/img/sheep.today.white.svg" />
+                <img src="../app/img/sheep.today.white.svg" />
             </figure>
             <h3 class="cTitleAsTip">Лайкни</h3>
             <div class="social-likes">
@@ -493,10 +493,10 @@
 
 <aside class="elMagicHeader cMagicHeader">
         <nav class="cMainNav">
-            <a href="#Home" class="is-active">Home</a>
-            <a href="#" class="">Gallery</a>
-            <a href="products/index.html" class="">Products</a>
-            <a href="#Contacts" class="">Contacts</a>
+                <a href="../index.html" class="">Home</a>
+                <a href="#" class="">Gallery</a>
+                <a href="#" class="is-active">Products</a>
+                <a href="../index.html#Contacts" class="">Contacts</a>
         </nav>
 </aside>
 
@@ -522,7 +522,7 @@
             You found secret place!
         </div>
         <figure class="image">
-            <img src="app/img/LuiSheep.svg" alt="sheep"/>
+            <img src="../app/img/LuiSheep.svg" alt="sheep"/>
         </figure>
     </div>
 </aside>
@@ -547,15 +547,14 @@
      src="app/lib/social-likes.js"
      ></script><!-- / -->
 <!-- app libs --><script
-     src="app/app4k/app_bundle.js"
+     src="../app/app4k/app_bundle.js"
      ></script><!-- / -->
 <!-- app engine --><script
-     src="app/app4k/main.js"
+     src="../app/app4k/main.js"
      ></script><!-- / -->
 
 <!-- =================================================== [Third Tools] -->
 
-<!-- mailchimp --><script type='text/javascript'src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>$(function($) {window.fnames = new Array(); window.ftypes = new Array(); fnames[0]='EMAIL'; ftypes[0]='email'; fnames[1]='FNAME'; ftypes[1]='text'; fnames[2]='LNAME'; ftypes[2]='text'; fnames[3]='BIRTHDAY'; ftypes[3]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script><!-- / -->
 
 
 </body>
