--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -249,15 +249,16 @@
         <a href="http://www.laola1.tv/"><i>Laola 1</i></a>
     </div>
     <div class="a2">
-        <a href="http://fan-tv.net/channels/36-eurosport.html"><i>Eur 1</i></a>
+        <a href="http://fan-tv.net/channels/36-eurosport.html" class="red"><i>Eur 1</i></a>
         <a href="http://fan-tv.net/channels/37-eurosport-2.html"><i>Eur 2</i></a>
     </div>
+    <a href="http://www.myfeed4u.net/section/other/"><i>black stream</i></a>
     <div class="a2">
         <a href="http://www.eurovisionsports.tv/"><i>EurVis TV</i></a>
-        <a href="http://www.eurovisionsports.tv/ibu/"><i>IBU</i></a>
+        <a href="http://www.eurovisionsports.tv/ibu/"><i>IBU TV</i></a>
     </div>
     <div class="a2">
-        <a href="http://www.biathlonworld.com/calendar/"><i>IBU Calendar</i></a>
+        <a href="http://www.biathlonworld.com/calendar/" class="bold"><i>IBU Calendar</i></a>
         <a href="http://services.biathlonresults.com/schedule.aspx"><i>Live</i></a>
     </div>
     <a href="http://www.european-athletics.org/calendar/index.html" class=""><i>eur athletics calendar</i></a>
