--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -425,8 +425,8 @@
         <a href="https://google-webfonts-helper.herokuapp.com/fonts/" class="center"><i>▼</i></a>
     </div>
     <div class="a2">
-        <a href="http://fontawesome.io/icons/" class="bold"><i>F Awesome</i></a>
-        <a href="http://ikreator.com/special-characters/"><i>Chår Map</i></a>
+        <a href="http://fontawesome.io/icons/"><i>F Awesome</i></a>
+        <a href="https://fontawesome.com/v4.7.0/icons/" class="bold"><i>v4.7</i></a>
     </div>
 
     <a href="http://www.typetester.org/"><i>Type Tester</i></a>
