--- a/zlhome/MWP-sites.html
+++ b/zlhome/MWP-sites.html
@@ -30,8 +30,8 @@
                     </section>
                     <section class="cHplCollumn isFirst"><!-- ============================================== c1 -->
 
-                        <a href="http://www.egamings.com/" view class="vEG"></a>
-                        <a  dat atitle href="http://www.egamings.com/">
+                        <a href="https://www.egamings.com/" view class="vEG"></a>
+                        <a  dat atitle href="https://www.egamings.com/">
                             eGamings.com
                         </a>
                         <a  dat href="https://www.egamings.com/wp/wp-admin/">
@@ -39,17 +39,17 @@
                         </a>
                         <span dat title span>&nbsp;</span>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://test.egamings.com/">
+                        <a  dat atitle href="https://test.egamings.com/">
                             <span>[TEST]</span> eGamings
                         </a>
-                        <a  dat href="http://test.egamings.com/wp/wp-admin/">
+                        <a  dat href="https://test.egamings.com/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://qa.egamings.com/">
+                        <a  dat atitle href="https://qa.egamings.com/">
                             <span>[QA]</span> eGamings
                         </a>
-                        <a  dat href="http://qa.egamings.com/wp/wp-admin/">
+                        <a  dat href="https://qa.egamings.com/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
@@ -66,26 +66,26 @@
 
                     </section>
                     <section class="cHplCollumn isSecond"><!-- ============================================== c2 -->
-                        <a href="http://www.softgamings.com/"  view class="vSG"></a>
-                        <a  dat atitle href="http://www.softgamings.com/">
+                        <a href="https://www.softgamings.com/"  view class="vSG"></a>
+                        <a  dat atitle href="https://www.softgamings.com/">
                             SoftGamings.com
                         </a>
-                        <a  dat href="http://www.softgamings.com/wp/wp-admin/">
+                        <a  dat href="https://www.softgamings.com/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://test.softgamings.com/">
+                        <a  dat atitle href="https://test.softgamings.com/">
                             <span>[TEST]</span> softgamings.com
                         </a>
-                        <a  dat href="http://test.softgamings.com/wp/wp-admin/">
+                        <a  dat href="https://test.softgamings.com/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://qa.softgamings.com/">
+                        <a  dat atitle href="https://qa.softgamings.com/">
                             <span>[QA]</span> softgamings.com
                         </a>
-                        <a  dat href="http://qa.softgamings.com/wp/wp-admin/">
+                        <a  dat href="https://qa.softgamings.com/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
@@ -102,31 +102,31 @@
 
                     </section>
                     <section class="cHplCollumn isThird"><!-- ============================================== c3 -->
-                        <a href="http://gaminglicensing.com/" view class="vGL"></a>
-                        <a  dat atitle href="http://gaminglicensing.com/">
+                        <a href="https://gaminglicensing.com/" view class="vGL"></a>
+                        <a  dat atitle href="https://gaminglicensing.com/">
                             GamingLicensing.com
                         </a>
-                        <a  dat href="http://www.gaminglicensing.com/page/wp/wp-admin/">
+                        <a  dat href="https://www.gaminglicensing.com/page/wp/wp-admin/">
                             wpAdmin
                         </a>
-                        <a  dat href="http://www.gaminglicensing.com/administration/">
+                        <a  dat href="https://www.gaminglicensing.com/administration/">
                             HomePage admin
                         </a>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://test.gaminglicensing.com/">
+                        <a  dat atitle href="https://test.gaminglicensing.com/">
                             <span>[TEST]</span> GamingLicensing
                         </a>
-                        <a  dat href="http://test.gaminglicensing.com/page/wp/wp-admin/">
+                        <a  dat href="https://test.gaminglicensing.com/page/wp/wp-admin/">
                             wpAdmin
                         </a>
                         <span dat title span>&nbsp;</span>
-                        <a  dat atitle href="http://qa.gaminglicensing.com/">
+                        <a  dat atitle href="https://qa.gaminglicensing.com/">
                             <span>[QA]</span> GamingLicensing
                         </a>
-                        <a  dat href="http://qa.gaminglicensing.com/page/wp/wp-admin/">
+                        <a  dat href="https://qa.gaminglicensing.com/page/wp/wp-admin/">
                             wpAdmin
                         </a>
-                        <a  dat href="http://qa.gaminglicensing.com/administration/">
+                        <a  dat href="https://qa.gaminglicensing.com/administration/">
                             HomePage admin/admin
                         </a>
                         <span dat title span>&nbsp;</span>
@@ -142,20 +142,17 @@
 
                     </section>
                     <section class="cHplCollumn isLast c3dat"><!-- ============================================== c4 -->
-                        <a  dat href="https://devxatest.egamings.com:23443/static/editor-manual/article-base.html" class="editors-manual">Editors manual →</a>
+                        <a  dat href="https://devxatest.egamings.com:23443/static/sg2018/Layers.html" class="editors-manual">SG2 HTML →</a>
+                        <a  dat href="https://devxatest.egamings.com:23443/static/editor-manual/article-base.html" class="editors-manual">Old HTML →</a>
                         <span dat title span>&nbsp;</span>
                         <span dat title>Usefull links <i class="fa fa-external-link" aria-hidden="true"></i></span>
                         <a dat href="http://www.limaker.com/"><i class="fa fa-list fa-22x fa-fw"></i> Generate &lt;UL&gt; lists</a>
                         <a dat href="http://www.html-tables.com/"><i class="fa fa-table fa-22x fa-fw"></i> Generate table</a>
-                        <a dat href="http://fontawesome.io/icons/"><i class="fa fa-cubes fa-22x fa-fw"></i> Icons</a>
+                        <a dat href="https://fontawesome.com/v4.7.0/icons/"><i class="fa fa-cubes fa-22x fa-fw"></i> Icons</a>
                     </section>
 
                     <section class="cHplCollumn isInfo c3dat">
                         zinovi@egamings.com<br>
-                        pokEDA@#13<br>
-                        <br>
-                        admin<br>
-                        thi9Aa4aig7aTo6<br>
                     </section>
                 </article>
 
