--- a/app4K/index.html
+++ b/app4K/index.html
@@ -415,7 +415,7 @@
 
 <!-- =================================================== Read more -->
 
-<div style="padding-top:4rem;"><img src="data/landing/borders-cats-src.svg" style="display:block;" alt=""/></div>
+<div style="padding-top:4rem;overflow:hidden;"><img src="data/landing/borders-cats-src.svg" style="display:block;margin:-2px;max-width:102%;" alt=""/></div>
 <div class="elLayer cLayerContrast textLayout">
     <header class="cStageHeader">
         <h2 class="aCaption">And Now for Something <br> Completely Different</h2>
