--- a/Snippets/html.html
+++ b/Snippets/html.html
@@ -9,6 +9,9 @@
 <![endif]-->
 <html lang="en">
 <head>
+
+    <meta http-equiv="refresh" content="0; url=xxxxxxxxxx"/>
+
     <!-- appName-fullhouse 12з.0002 -->
     <title>fullhouse</title>
     <meta charset="utf-8">
