--- a/Snippets/html.html
+++ b/Snippets/html.html
@@ -29,6 +29,14 @@
     <meta property="og:image:height" content="600" />
     <meta property="og:locale" content="en_US" />
 
+    <!-- social links (displayed in gogle search view) -->
+
+    <span itemscope itemtype="http://schema.org/Organization">
+      <link itemprop="url" href="http://www.your-company-site.com">
+      <a itemprop="sameAs" href="http://www.facebook.com/your-company">FB</a>
+      <a itemprop="sameAs" href="http://www.twitter.com/YourCompany">Twitter</a>
+    </span>
+
     <!-- FAVICON -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="app/favicons/apple-icon-180x180.png">
