home page april2018

--- a/zlhome/eg.html
+++ b/zlhome/eg.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- ☺[eg] eg.home v2018.3.6 -->
+    <!-- ☺[eg] eg.home v2018.4.24 -->
         <title>☺[eg]</title>
 
     <!-- frontent settings 12з.0002-->
@@ -52,7 +52,7 @@
 <section class="cHplCollumn isFirst c1dat"><!-- ============================================== c1 -->
 
 <blockquote>
-<a dat href="../_zlEpic/zlhome/webhome.html">ZL.home</a>
+<a dat href="webhome.html">ZL.home</a>
 ツ
 </blockquote>
 
@@ -114,7 +114,7 @@
 </blockquote>
 
 <blockquote smaller>
-    <a dat href="https://chat.egamings.com/egamings/channels/jenkins">jenkins</a>
+    <a dat href="https://buildxa.egamings.com/">jenkins</a>
     <a  dat
         href="https://kibana.egamings.com/app/kibana#/discover/PHP-errors?_g=(refreshInterval:(display:Off,pause:!f,value:0),time:(from:now-7d,mode:quick,to:now))&_a=(columns:!(syslog_program,syslog_message),filters:!(),index:'phplog-*',interval:auto,query:(query_string:(analyze_wildcard:!t,query:'syslog_program:*php%20AND%20syslog_message:*softgamings*')),sort:!('@timestamp',desc))">
         Kabana PhpLog</a>
@@ -132,6 +132,9 @@
 </section>
 <section class="cHplCollumn isThird"><!-- ============================================== c3 -->
 
+<blockquote smaller>
+    <a dat href="https://test.softgamings.com/zl/">test/zl</a>
+</blockquote>
 <blockquote bigger>
     <a dat href="https://test.softgamings.com/">SG2 test</a>
     <a dat href="https://test.softgamings.com/wp/wp-admin/edit.php?post_type=page">Admin test</a>
