--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<!-- v2018.4.24 -->
 <!-- frontent settings 0з webhome -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -240,17 +241,12 @@
 
     <div class="a3 center">
         <a href="http://www.youtube.com/"><i>YT</i></a>
-        <a href="http://www.youtube-mp3.org/"><i>›m</i></a>
         <a href="http://www.clipconverter.cc/"><i>›v</i></a>
     </div>
 
     <div class="a23">
         <a href="http://livetv.sx/allupcoming/" class="red bold"><i>Live TV ru</i></a>
         <a href="http://www.laola1.tv/"><i>Laola 1</i></a>
-    </div>
-    <div class="a2">
-        <a href="http://fan-tv.net/channels/36-eurosport.html" class="red"><i>Eur 1</i></a>
-        <a href="http://fan-tv.net/channels/37-eurosport-2.html"><i>Eur 2</i></a>
     </div>
     <a href="http://www.myfeed4u.net/section/other/"><i>black stream</i></a>
     <div class="a2">
@@ -313,10 +309,6 @@
 
     <a href="https://analytics.google.com/analytics/web/"><i>G Analytics</i></a>
 
-    <div class="a0"></div>
-    <a href="https://www.typeform.com/"><i>typeform</i></a>
-    <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
-    <a href="https://gomockingbird.com/"><i>mockingbird</i></a>
 
     <div class="a0"></div>
 
@@ -364,12 +356,26 @@
     </div>
     <div class="a0"></div>
 
-    <a href="https://gethead.info/"><i>◄Head►</i></a>
+    <a href="http://telegra.ph/" class="red bold"><i>telegra.ph</i></a>
+    <a href="https://whimsical.co/N5mPdNPKnDFELwEaCS4Wj" class="bold"><i>whimsical</i></a>
+    <a href="https://www.draw.io/"><i>draw.io</i></a>
 
     <div class="a0"></div>
 
-    <a href="http://www.layoutit.com/build"><i>Boo Builder</i></a>
-    <a href="http://hackerthemes.com/bootstrap-cheatsheet/"><i>Bootstrap Cheat</i></a>
+    <a href="https://gomockingbird.com/"><i>mockingbird</i></a>
+
+    <div class="a2">
+        <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
+        <a href="http://jsbin.com/?html,output" class="red bold"><i>jsBin</i></a>
+    </div>
+    <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
+    <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
+
+    <div class="a0"></div>
+
+    
+
+    <a href="https://gethead.info/"><i>◄Head►</i></a>
 
     <div class="a0"></div>
 
@@ -377,7 +383,7 @@
         <a href="http://html-ipsum.com/"><i>html ipsum</i></a>
         <a href="http://www.niemanlab.org/journo-ipsum/"><i>journo</i></a>
     </div>
-    <a href="http://www.json-generator.com/"><i>json generator</i></a>
+    <a href="https://next.json-generator.com/"><i>json generator</i></a>
 
     <div class="a0"></div>
 
@@ -396,7 +402,7 @@
     </div>
     <div class="a2 center">
         <a href="http://www.w3schools.com/jquery/jquery_ref_events.asp"><i>jQ</i></a>
-        <a href="http://www.w3schools.com/js/default.asp"><i>JS</i></a>
+        <a href="https://www.w3schools.com/jsref/default.asp"><i>JS</i></a>
     </div>
     <a href="http://caniuse.com/" class="bold"><i>caniuse</i></a>
     <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
@@ -418,6 +424,7 @@
     <div class="a0"><i>€ · ♥★←→ &nbsp;</i></div>
     <div class="a0"><i>ʕ⊙ᴥ⊙ʔ ༼°▽°༽</i></div>
     <div class="a0"><i>🐪🐫🐷🐸🐥🐬</i></div>
+    <div class="a0"><i>(●ᴥ●) ╭∩╮ʕ•ᴥ•ʔ╭∩╮</i></div>
     
 
     <div class="a23">
@@ -429,13 +436,15 @@
         <a href="https://fontawesome.com/v4.7.0/icons/" class="bold"><i>v4.7</i></a>
     </div>
 
-    <a href="http://www.typetester.org/"><i>Type Tester</i></a>
     <div class="a2">
         <a href="http://fontello.com/"><i>fontello</i></a>
         <a href="http://icomoon.io/app/#/select"><i>icomoon</i></a>
     </div>
 
     <div class="a0"></div>
+
+    <a href="https://www.zoho.eu/docs/"><i>filestorage</i></a>
+    <a href="https://cloudinary.com/"><i>cloudinary</i></a>
 
 </div>
 
