--- a/Snippets/html.html
+++ b/Snippets/html.html
@@ -10,96 +10,99 @@
 <html lang="en">
 <head>
 
-    <meta http-equiv="refresh" content="0; url=xxxxxxxxxx"/>
+<meta http-equiv="refresh" content="0; url=xxxxxxxxxx"/>
 
-    <!-- appName-fullhouse 12з.0002 -->
-    <title>fullhouse</title>
-    <meta charset="utf-8">
+<!-- appName-fullhouse 12з.0002 -->
+<title>fullhouse</title>
+<meta charset="utf-8">
 
-    <!-- ================================================ Content settings -->
+<!-- ================================================ Content settings -->
 
-    <!-- SOCIAL -->
+<!-- SOCIAL -->
 
-    <meta property="og:title" content="zlDevelopment" />
-    <meta property="og:type" content="article" />
-    <meta property="og:description" content="frontEndSnippets" />
-    <meta property="og:url" content="http://sheep.today/zl/development.html" />
-    <meta property="og:image" content="http://sheep.today/zl/illustrations/promo-picture.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:locale" content="en_US" />
+<meta property="og:title" content="zlDevelopment" />
+<meta property="og:type" content="article" />
+<meta property="og:description" content="frontEndSnippets" />
+<meta property="og:url" content="http://sheep.today/zl/development.html" />
+<meta property="og:image" content="http://sheep.today/zl/illustrations/promo-picture.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="600" />
+<meta property="og:locale" content="en_US" />
 
-    <!-- social links (displayed in gogle search view) -->
+<!-- social links (displayed in gogle search view) -->
 
-    <span itemscope itemtype="http://schema.org/Organization">
-      <link itemprop="url" href="http://www.your-company-site.com">
-      <a itemprop="sameAs" href="http://www.facebook.com/your-company">FB</a>
-      <a itemprop="sameAs" href="http://www.twitter.com/YourCompany">Twitter</a>
-    </span>
+<span itemscope itemtype="http://schema.org/Organization">
+  <link itemprop="url" href="http://www.your-company-site.com">
+  <a itemprop="sameAs" href="http://www.facebook.com/your-company">FB</a>
+  <a itemprop="sameAs" href="http://www.twitter.com/YourCompany">Twitter</a>
+</span>
 
-    <!-- FAVICON -->
+<!-- FAVICON -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="app/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="app/favicons/android-icon-192x192.png">
-    <link rel="manifest" href="app/favicons/manifest.json">
-    <meta name="msapplication-TileColor" content="#FFCC01">
-    <meta name="msapplication-TileImage" content="app/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#FFCC01">
+<link rel="apple-touch-icon" sizes="180x180" href="app/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="app/favicons/android-icon-192x192.png">
+<link rel="manifest" href="app/favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#FFCC01">
+<meta name="msapplication-TileImage" content="app/favicons/ms-icon-144x144.png">
+<meta name="theme-color" content="#FFCC01">
 
-    <!-- ================================================ Frontend settings -->
+<!-- ================================================ Frontend settings -->
 
-    <!-- frontent settings 12з.0002-->
+<!-- frontent settings 12з.0002-->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!-- critical CSS -->
+<!-- critical CSS -->
 
-    <style>
-    </style>
+<style>
+</style>
 
 
-    <!-- libs -->
+<!-- libs -->
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script>window.jQuery || document.write('<script src="app/vendor/jquery/jquery.js"><\/script>')</script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script>
+    window.jQuery
+    || document.write('<script src="app/vendor/jquery/jquery.js"><\/script>'
+</script>
 
-    <!-- bootstrap CDN -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="all">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<!-- bootstrap CDN -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="all">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 <!-- faster   https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js -->
 
-    <!-- PURE CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+<!-- PURE CSS -->
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
 
-    <!-- MATERIALIZE CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+<!-- MATERIALIZE CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
-    <!-- FONT AWESOME -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" media="all">
+<!-- FONT AWESOME -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" media="all">
 
-    <!-- fonts -->
+<!-- fonts -->
 
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 
-    <!-- app -->
+<!-- app -->
 
-    <!-- app design -->
+<!-- app design -->
 
-    <link href="app/css/app.css" rel="stylesheet"  media="all">
+<link href="app/css/app.css" rel="stylesheet"  media="all">
 
-    <!-- app engine -->
+<!-- app engine -->
 
-    <script src="app/js/app.js"></script>
+<script src="app/js/app.js"></script>
 
-    <!-- ================================================ Custom settings -->
+<!-- ================================================ Custom settings -->
 
-    <!-- .. -->
+<!-- .. -->
 
 </head>
 <body class="Māčūļī">
