--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -291,6 +291,11 @@
     </div>
 
     <a href="http://shrib.com/fi2jjGmZx2bicrF" class="red center"><i>shrib</i></a>
+    <div class="a2 center">
+        <a href="dvBookmarks2018.html"><i>dvTul</i></a>
+        <a href="inet2018.html"><i>inet</i></a>
+    </div>
+    <div class="a0"></div>
     <a href="https://app.asana.com/" class="center"><i>Asana</i></a>
     <a href="https://github.com/zlsheepcity" class="center"><i>GitHub zlsheepcity</i></a>
 
@@ -421,10 +426,11 @@
     <a href="http://b64.io/" class="red"><i>base64 enc</i></a>
 
     <div class="a0"><i>▲▼◄►✓✗&nbsp;«» &nbsp;</i></div>
-    <div class="a0"><i>€ · ♥★←→ &nbsp;</i></div>
+    <div class="a0"><i>·€♥★←→ &nbsp;</i></div>
     <div class="a0"><i>ʕ⊙ᴥ⊙ʔ ༼°▽°༽</i></div>
-    <div class="a0"><i>🐪🐫🐷🐸🐥🐬</i></div>
-    <div class="a0"><i>(●ᴥ●) ╭∩╮ʕ•ᴥ•ʔ╭∩╮</i></div>
+    <div class="a0" class="red"><i>╭∩╮ʕ•ᴥ•ʔ╭∩╮</i></div>
+    <div class="a0"><i>(●ᴥ●)</i></div>
+    <div class="a0"><i>Māčūļī</i></div>
     
 
     <div class="a23">
@@ -443,8 +449,10 @@
 
     <div class="a0"></div>
 
-    <a href="https://www.zoho.eu/docs/"><i>filestorage</i></a>
-    <a href="https://cloudinary.com/"><i>cloudinary</i></a>
+    <div class="a2">
+        <a href="https://www.zoho.eu/docs/"><i>filestorage</i></a>
+        <a href="https://cloudinary.com/"><i>cloudinary</i></a>
+    </div>
 
 </div>
 
