--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -325,6 +325,7 @@
 <!-- ========================================================================== -->
 <div class="collumn collumn4">
 
+    <a href="https://news.ycombinator.com/"><i>HackerNews</i></a>
     <a href="http://www.habrahabr.ru/" class=""><i>habrahabr</i></a>
     <a href="http://www.jvetrau.com/"><i>jvetrau</i></a>
     <a href="http://www.smashingmagazine.com/"><i>2) Smashing Mag</i></a>
