--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -410,8 +410,11 @@
         <a href="http://www.w3schools.com/jquery/jquery_ref_events.asp"><i>jQ</i></a>
         <a href="https://www.w3schools.com/jsref/default.asp"><i>JS</i></a>
     </div>
+
+    <div class="a2">
     <a href="http://caniuse.com/" class="bold"><i>caniuse</i></a>
     <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
+    </div>
 
     <div class="a2">
         <a href="http://apps.pixlr.com/editor/"><i>Pixlr</i></a>
@@ -432,7 +435,8 @@
     <div class="a0" class="red"><i>╭∩╮ʕ•ᴥ•ʔ╭∩╮</i></div>
     <div class="a0"><i>(●ᴥ●)</i></div>
     <div class="a0"><i>Māčūļī</i></div>
-    
+
+    <a href="http://kirillbelyaev.com/all/spaces/"><i>Spaces</i></a>
 
     <div class="a23">
         <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
